<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_image">

    <include android:id="@+id/include_rl_result" layout="@layout/include_result_header" />

    <RelativeLayout
        android:id="@+id/rl_iv_result_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/include_rl_result">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:src="@drawable/line" />

    </RelativeLayout >


    <RelativeLayout
        android:id="@+id/rl_ll_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_iv_result_line"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="10.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/course"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/credit"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/score"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_iv_result_line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/rl_ll_result" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:src="@drawable/line"/>

    </RelativeLayout >


    <RelativeLayout
        android:id="@+id/rl_include_result_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/include_result_bottom" />

    </RelativeLayout >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_iv_result_line2"
        android:layout_above="@id/rl_include_result_bottom" >

        <ListView
            android:id="@+id/lv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout >

</RelativeLayout>